[tool.poetry]
name = "viber-framework"
version = "0.1.0"
description = ""
authors = ["Mykola Kharchenko <mykola.kharchenko@office1.bg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
